# pulsarity-localization

./: pyproject.toml
src/pulsarity_languages/: __init__.py
src/pulsarity_languages/locals/: en-us.json
src/pulsarity_localization/: __init__.py
src/pulsarity_localization/locals/: en-us.json
